--- a/scss/app.scss
+++ b/scss/app.scss
@@ -50,8 +50,8 @@ $mm-color:          $indigo;
 $mm-color-light:    lighten($mm-color, 10%);
 $mm-color-dark:     darken($mm-color, 10%);
 
-$mm-color-init-screen:          #ff5c00;
-$mm-color-init-screen-alt:      #ff7600;
+$mm-color-init-screen:          #1a237e;
+$mm-color-init-screen-alt:      #303F9F;
 $mm-init-screen-spinner-color:  $white;
 $mm-init-screen-logo-width:     60%;
 $mm-init-screen-logo-max-width: 300px;
